[package]
name = "esp32s3_no_std_async_mqtt"
version = "0.1.0"
authors = ["sambenko <sam.benko@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.11.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32s3","log"] }
log = { version = "0.4.18" }
